--- a/tyyli.css
+++ b/tyyli.css
@@ -10,13 +10,14 @@ body {
   background-color: #E8F3F9;
   
 }
+
 /* Navigointipalkin asetuksia*/
 .navigation-bar{
   overflow: hidden;
   background-color: #9DFE98;
   position: relative;
-  
 }
+
 /* navigointipalkin a elementtien asetukset. */
 .navigation-bar a {
   float: left;
@@ -26,17 +27,19 @@ body {
   text-decoration: none;
   font-size: 32px;
   margin: 4px 2px;
-    
 }
+
 /* navigointipalkin a elementtien reaktiot hiireen. */
 .navigation-bar a:hover {
   background-color: #A6F4BE;
   color: whitesmoke;
 }
+
 .navigation-bar a.active {
   background-color: #A6F4BE;
   color: whitesmoke;
 }
+
 /* Tilaa napin asetuksia. */
 .tilaanappi {
   background-color: #A6F4BE; 
@@ -48,11 +51,13 @@ body {
   cursor: pointer;
   border-radius: 18px;
 }
+
 .tilaanappi:hover {
   background-color: #9DFE98;
   color: whitesmoke;
   border-color:#E8F3F9
 }
+
 /* pidike kuvavalikon kuville*/
 .kuvapidike {
   justify-content: space-around;
@@ -68,7 +73,7 @@ body {
 
 /* Sisällön keskitystä varten luotu pidike */ 
 .pidike {
-  position:relative;
+ 
   text-align: center;
 }
 /* Kaupan tuotteille kortti missä hinta ja nappi mikä paljastaa lisää tietoa tuotteesta("piiloteksti"). */ 
@@ -115,14 +120,17 @@ body {
   color: red;
 }
 
-
+/* Yläpalkin logon asetuksia.*/ 
 .logo{
   width: 100px; 
   border-radius: 66px;
 }
-
+.etusivunlogo{
+  width: 45%;
+}
+/* Footer ja footer listan(tiedot sivulla) asetuksia*/ 
 .footer {
-  padding: 10px;
+  padding-bottom: 3px;
   left: 0;
   bottom: 0;
   width: 100%;
@@ -138,7 +146,7 @@ body {
   list-style-position: inside;
 }
 
-/* sijoitus Näytön ollessa eri kokoinen.*/
+/* ylä- ja kuvavalikon sijoitus Näytön ollessa eri kokoinen.*/
 @media (max-width: 600px) {
   .navigation-bar a {
     padding: 0%;
@@ -154,6 +162,9 @@ body {
     margin-top: auto;
     margin-bottom: auto;
   }
+  .etusivunlogo{
+    width: 50%;
+  }
  
 }
 @media screen and (min-width: 600px) {
@@ -165,7 +176,9 @@ body {
     margin-top: -20px;
     margin-bottom: -30px;
   }
-  
+  .etusivunlogo{
+    width: 35%;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -176,5 +189,8 @@ body {
   .navigation-bar a {
     padding: 24px 16px;
     width: auto;
+  }
+  .etusivunlogo{
+    width: 25%;
   }
 }
